Set the policy file for JServe
JServe is pretty much deprecated in 3.3, and this will do nothing at all out of the box.  However, since Larry is allowing minor fixes now, and this is the fastest way to close the bug....

Fix for bug #4013
Submitted by: Dave@JungleMoss.com

--- a/src/etc/jk/wrapper.properties
+++ b/src/etc/jk/wrapper.properties
@@ -1,7 +1,7 @@
 #
-# $Header: /tmp/cvs-vintage/tomcat/src/etc/jk/wrapper.properties,v 1.2 2001/05/20 20:27:21 nacho Exp $
-# $Revision: 1.2 $
-# $Date: 2001/05/20 20:27:21 $
+# $Header: /tmp/cvs-vintage/tomcat/src/etc/jk/wrapper.properties,v 1.3 2001/10/13 02:25:13 billbarker Exp $
+# $Revision: 1.3 $
+# $Date: 2001/10/13 02:25:13 $
 #
 #
 # jk_service.properties - a bootstrup file for the Tomcat NT service.
@@ -82,6 +82,13 @@ wrapper.javabin=$(wrapper.java_home)\bin\java.exe
 #
 wrapper.startup_class=org.apache.tomcat.startup.Main
 
+
+ #
+# This is the location where tomcat's policy file
+# is located
+#
+wrapper.tomcat_policy=$(wrapper.tomcat_home)\conf\tomcat.policy
+
 #
 # This is the location where tomcat's server.xml configuration file 
 # is located. 
@@ -106,4 +113,4 @@ wrapper.shutdown_protocol=ajp12
 # This is the command line that is used to start Tomcat. You can *add* extra
 # parameters to it but you can not remove anything.
 #
-wrapper.cmd_line=$(wrapper.javabin)  -Dtomcat.home="$(wrapper.tomcat_home)" -classpath $(wrapper.class_path) $(wrapper.startup_class) -config $(wrapper.server_xml) 
+wrapper.cmd_line=$(wrapper.javabin) -Djava.security.policy=="$(wrapper.tomcat_policy)"   -Dtomcat.home="$(wrapper.tomcat_home)" -classpath $(wrapper.class_path) $(wrapper.startup_class) -config $(wrapper.server_xml) 
