added permission for new template Issue number: Obtained from: Submitted by: Reviewed by:

--- a/src/conf/Scarab.properties
+++ b/src/conf/Scarab.properties
@@ -56,6 +56,7 @@ scarab.security.admin.GlobalAttributeEdit.vm=Domain | Edit
 #scarab.security.admin.AttributeShow.vm=Module | Edit
 #scarab.security.admin.AttributeEdit.vm=Module | Edit
 #scarab.security.admin.ModuleAttributeEditor.vm=Module | Edit
+scarab.security.ModifyModule.vm=Module | Edit
 scarab.security.Approval.vm=Item | Approve
 scarab.security.MoveIssue.vm=Issue | Edit
 scarab.security.MoveIssue2.vm=Issue | Edit
