--- a/src/conf/web.xml
+++ b/src/conf/web.xml
@@ -7,7 +7,7 @@
 <web-app>
     <servlet>
         <servlet-name>
-           scarab
+           @SCARAB_CONTEXT@
         </servlet-name>
         <servlet-class>
             org.apache.turbine.Turbine
