--- a/src/conf/Scarab.properties
+++ b/src/conf/Scarab.properties
@@ -53,10 +53,8 @@ scarab.security.entry.Wizard3.vm=Issue | Enter
 scarab.security.entry.Wizard4.vm=Issue | Enter
 scarab.security.admin.GlobalAttributeShow.vm=Domain | Edit
 scarab.security.admin.GlobalAttributeEdit.vm=Domain | Edit
-#scarab.security.admin.AttributeShow.vm=Module | Edit
-#scarab.security.admin.AttributeEdit.vm=Module | Edit
-#scarab.security.admin.ModuleAttributeEditor.vm=Module | Edit
 scarab.security.ModifyModule.vm=Module | Edit
+scarab.security.admin.ManageArtifactTypes.vm=Module | Edit
 scarab.security.Approval.vm=Item | Approve
 scarab.security.MoveIssue.vm=Issue | Edit
 scarab.security.MoveIssue2.vm=Issue | Edit
