--- a/src/conf/Scarab.properties
+++ b/src/conf/Scarab.properties
@@ -47,24 +47,41 @@ scarab.CurrentModuleTemplate=SelectModule.vm
 
 # Base permissions for Scarab Pages
 scarab.security.AssignIssue.vm=Issue | Edit
+scarab.security.MoveIssue.vm=Issue | Edit
+scarab.security.MoveIssue2.vm=Issue | Edit
 scarab.security.entry.Wizard1.vm=Issue | Enter
 scarab.security.entry.Wizard2.vm=Issue | Enter
 scarab.security.entry.Wizard3.vm=Issue | Enter
 scarab.security.entry.Wizard4.vm=Issue | Enter
-scarab.security.admin.GlobalAttributeShow.vm=Domain | Edit
-scarab.security.admin.GlobalAttributeEdit.vm=Domain | Edit
-scarab.security.ModifyModule.vm=Module | Edit
-scarab.security.admin.ManageArtifactTypes.vm=Module | Edit
 scarab.security.Approval.vm=Item | Approve
-scarab.security.MoveIssue.vm=Issue | Edit
-scarab.security.MoveIssue2.vm=Issue | Edit
+scarab.security.Search.vm=Issue | Search
+scarab.security.AdvancedQuery.vm=Issue | Search
+scarab.security.IssueList.vm=Issue | Search
+scarab.security.ViewIssue.vm=Issue | View
+
+scarab.security.QueryList.vm=User | Edit Preferences
+scarab.security.TemplateList.vm=User | Edit Preferences
 scarab.security.SaveQuery.vm=User | Edit Preferences
 scarab.security.SaveTemplate.vm=User | Edit Preferences
 scarab.security.ConfigureIssueList.vm=User | Edit Preferences
-scarab.security.Search.vm=Issue | Search
-scarab.security.AdvancedQuery.vm=Issue | Search
-scarab.security.QueryList.vm=User | Edit Preferences
-scarab.security.TemplateList.vm=User | Edit Preferences
-scarab.security.ViewIssue.vm=Issue | View
+
+# reports
+scarab.security.reports.Report_1.vm=Issue | Search
+scarab.security.reports.SaveReport.vm=Issue | Search
 scarab.security.reports.Step1.vm=Issue | Search
-scarab.security.IssueList.vm=Issue | Search
+scarab.security.reports.Step2.vm=Issue | Search
+scarab.security.reports.Step2b.vm=Issue | Search
+scarab.security.reports.Step3_1a.vm=Issue | Search
+scarab.security.reports.Step3_1b.vm=Issue | Search
+scarab.security.reports.Step3_2a.vm=Issue | Search
+scarab.security.reports.Step3_2b.vm=Issue | Search
+
+# admin screens
+scarab.security.admin.GlobalAttributeShow.vm=Domain | Edit
+scarab.security.admin.GlobalAttributeEdit.vm=Domain | Edit
+scarab.security.admin.ManageArtifactTypes.vm=Module | Edit
+scarab.security.admin.ArtifactTypeEdit.vm=Module | Edit
+scarab.security.admin.ArtifactTypeSelect.vm=Module | Edit
+scarab.security.admin.AttributeGroup.vm=Module | Edit
+scarab.security.admin.AttributeSelect.vm=Module | Edit
+scarab.security.ModifyModule.vm=Module | Edit
