added date/time to the default log output for the server

--- a/src/etc/conf/default/log4j.properties
+++ b/src/etc/conf/default/log4j.properties
@@ -4,7 +4,7 @@
 ##                                                                          ##
 ### ====================================================================== ###
 
-### $Id: log4j.properties,v 1.12 2001/09/11 17:32:36 starksm Exp $ ###
+### $Id: log4j.properties,v 1.13 2001/10/18 08:27:42 kimptoc Exp $ ###
 
 # This creates a server.log appender and a console appender.
 
@@ -19,7 +19,7 @@ log4j.appender.Default=org.apache.log4j.FileAppender
 log4j.appender.Default.File=../log/server.log
 log4j.appender.Default.layout=org.apache.log4j.PatternLayout
 # A default format: [Category] msg\n
-log4j.appender.Default.layout.ConversionPattern=[%c{1},%p] %m%n
+log4j.appender.Default.layout.ConversionPattern=[%d,%c{1},%p] %m%n
 # A format useful for debugging concurrency: [Category,thread,elapased_ms] msg\n
 #log4j.appender.Default.layout.ConversionPattern=[%c{1},%t,%r] %m%n
 # Truncate if it aleady exists.
@@ -30,7 +30,7 @@ log4j.appender.Default.Append=false
 log4j.appender.Console=org.jboss.logging.log4j.ConsoleAppender
 log4j.appender.Console.Threshold=INFO
 log4j.appender.Console.layout=org.apache.log4j.PatternLayout
-log4j.appender.Console.layout.ConversionPattern=[%c{1}] %m%n
+log4j.appender.Console.layout.ConversionPattern=[%d{ABSOLUTE},%c{1}] %m%n
 
 # Example of increasing the priority threshold for the DefaultDS category
 #log4j.category.DefaultDS=FATAL
