added current issue type template constant.

--- a/src/conf/Scarab.properties
+++ b/src/conf/Scarab.properties
@@ -45,6 +45,9 @@ services.UserService.classname=org.tigris.scarab.services.user.TurbineUserServic
 # The page which is used to select the Module to use
 scarab.CurrentModuleTemplate=SelectModule.vm
 
+# The page which is used to select the Artifact Type to use
+scarab.CurrentArtifactTypeTemplate=SelectArtifactType.vm
+
 # Base permissions for Scarab Pages
 scarab.security.AssignIssue.vm=Issue | Edit
 scarab.security.MoveIssue.vm=Issue | Edit
@@ -79,6 +82,8 @@ scarab.security.reports.Step3_2b.vm=Issue | Search
 # admin screens
 scarab.security.admin.GlobalAttributeShow.vm=Domain | Edit
 scarab.security.admin.GlobalAttributeEdit.vm=Domain | Edit
+scarab.security.admin.GlobalArtifactTypeShow.vm=Domain | Edit
+scarab.security.admin.GlobalArtifactTypeAdd.vm=Domain | Edit
 scarab.security.admin.ManageArtifactTypes.vm=Module | Edit
 scarab.security.admin.ArtifactTypeEdit.vm=Module | Edit
 scarab.security.admin.ArtifactTypeSelect.vm=Module | Edit
