carol properties for port configuration

--- a/ext/carol-defaults.properties
+++ b/ext/carol-defaults.properties
@@ -38,6 +38,9 @@ carol.start.rmi=true
 # use carol naming (Multi JNDI)
 carol.start.jndi=true
 
+# default port number (0: no port configured by default)
+carol.jvm.rmi.server.port=0
+
 ######################################################################
 #                   Configuration for Rmi JRMP                      #
 ######################################################################
@@ -57,9 +60,6 @@ carol.jrmp.url=rmi://localhost:1099
 
 # interceptors prefix
 carol.jrmp.interceptor.pkgs=org.objectweb.PortableInterceptor.JRMPInitializerClass
-
-# default port number (0: no port configured by default)
-carol.jvm.jrmp.server.portnumber=0
 
 ######################################################################
 #                   Configuration for Rmi IIOP                       #
