--- a/ext/carol.properties
+++ b/ext/carol.properties
@@ -37,6 +37,8 @@ carol.start.rmi=true
 # use carol naming (Multi JNDI)
 carol.start.jndi=true
 
+# default port number (0: no port configured by default)
+carol.jvm.rmi.server.port=0
 
 ######################################################################
 #                   Configuration for Rmi JRMP                      #
@@ -140,9 +142,4 @@ carol.lmi.url=lmi://nohost:0
 # Global jndi configuration
 carol.jndi.java.naming.factory.url.pkgs=org.objectweb.carol.jndi.enc
 
-######################################################################
-#                   Configuration for JVM                            #
-######################################################################
 
-# default port number (0: no port configured by default)
-carol.jvm.jrmp.server.portnumber=0
