Added support of JRMP interceptors in cmi.

--- a/ext/carol-defaults.properties
+++ b/ext/carol-defaults.properties
@@ -112,6 +112,9 @@ carol.cmi.NameServiceClass=org.objectweb.carol.jndi.ns.CmiRegistry
 # java.naming.factory.initial property
 carol.cmi.context.factory=org.objectweb.carol.cmi.jndi.CmiInitialContextFactory
 
+# interceptors prefix
+carol.cmi.interceptor.pkgs=org.objectweb.PortableInterceptor.JRMPInitializerClass
+
 # java.naming.provider.url property
 carol.cmi.url=cmi://localhost:2002
 
