The first edition of sized based rolling policy

--- a/tests/build.xml
+++ b/tests/build.xml
@@ -371,6 +371,14 @@
     </junit>
   </target>
 
+  <target name="FileNamePatternParser" depends="build, cleanOutputDir">
+    <junit printsummary="yes" fork="yes" haltonfailure="yes">
+      <classpath refid="tests.classpath"/>
+      <formatter type="plain" usefile="false"/>
+      <test name="org.apache.log4j.rolling.helpers.FileNamePatternParserTestCase" />
+    </junit>
+  </target>
+
   <!-- ================================================================= -->
   <!-- ========================= Very long Tests ======================= -->
   <!-- ================================================================= -->
