--- a/contrib/struts-legacy/build.properties.sample
+++ b/contrib/struts-legacy/build.properties.sample
@@ -1,11 +1,15 @@
 # build.properties.sample -- Sample build.properties for "struts-legacy"
-# $Id: build.properties.sample,v 1.1 2003/05/09 10:14:42 husted Exp $
+# $Id: build.properties.sample,v 1.2 2003/05/17 13:15:08 husted Exp $
 
 
 # Commons Packages
 commons.home=../../jakarta-commons
 commons-logging.jar=${commons.home}/commons-logging/dist/commons-beanutils.jar"/>
 
+# JDK verson under which to compile [1.3 or 1.4]
+jdk.version=1.4
 
 # JDBC 2.0 Standard Extensions (javax.sql) JAR File
-# jdbc20ext.jar=/classes/jdbc20ext.jar
+# jdbc20ext.jar=/opt/JavaSoft/lib/jdbc2_0-stdext.jar
+# jdbc20ext.jar=../../../Java/Programs/sun/jdbc2_0-stdext.jar
+
