--- a/contrib/struts-legacy/build.xml
+++ b/contrib/struts-legacy/build.xml
@@ -1,7 +1,7 @@
 <!--
 @author Ted Husted
 @author Craig McClanahan
-@version $Revision: 1.3 $ $Date: 2003/05/17 13:15:08 $
+@version $Revision: 1.4 $ $Date: 2003/05/17 13:20:46 $
 -->
 
 <project name="struts-legacy" default="compile">
@@ -107,32 +107,7 @@
     </target>
 
 
-    <target name="docs" depends="prepare"
-     description="Create generated documentation and JavaDocs">
-<!--
-      <style basedir="src/conf"
-             destdir="${dist.home}/docs"
-           extension=".html"
-               style="src/conf/struts-doc.xsl"
-            includes="struts-faces.xml"/>
-
-      <javadoc
-          sourcepath="src/java"
-             destdir="${dist.home}/docs/api"
-              author="true"
-             private="true"
-             version="true"
-        packagenames="org.apache.struts.*"
-         windowtitle="${project.title} (Version ${project.version})"
-            doctitle="${project.title} (Version ${project.version})"
-              bottom="Copyright &#169; 2001-2003 - Apache Software Foundation">
-        <classpath refid="compile.classpath"/>
-      </javadoc>
--->
-    </target>
-
-
-    <target name="dist" depends="docs"
+    <target name="dist" depends="compile"
      description="Create binary distribution">
         <copy  todir="${dist.home}" file="LICENSE.txt"/>
         <jar jarfile="${dist.home}/${project.distname}.jar"
