--- a/tests/build.xml
+++ b/tests/build.xml
@@ -371,11 +371,19 @@
     </junit>
   </target>
 
-  <target name="FileNamePatternParser" depends="build, cleanOutputDir">
+  <target name="FileNamePattern" depends="build, cleanOutputDir">
     <junit printsummary="yes" fork="yes" haltonfailure="yes">
       <classpath refid="tests.classpath"/>
       <formatter type="plain" usefile="false"/>
-      <test name="org.apache.log4j.rolling.helpers.FileNamePatternParserTestCase" />
+      <test name="org.apache.log4j.rolling.helpers.FileNamePatternTestCase" />
+    </junit>
+  </target>
+  
+    <target name="SizedBasedRolling" depends="build, cleanOutputDir">
+    <junit printsummary="yes" fork="yes" haltonfailure="yes">
+      <classpath refid="tests.classpath"/>
+      <formatter type="plain" usefile="false"/>
+      <test name="org.apache.log4j.rolling.SizedBasedRollingTestCase" />
     </junit>
   </target>
 
