--- a/tests/build.xml
+++ b/tests/build.xml
@@ -379,11 +379,11 @@
     </junit>
   </target>
   
-    <target name="SizedBasedRolling" depends="build, cleanOutputDir">
+    <target name="SizeBasedRolling" depends="build, cleanOutputDir">
     <junit printsummary="yes" fork="yes" haltonfailure="yes">
       <classpath refid="tests.classpath"/>
       <formatter type="plain" usefile="false"/>
-      <test name="org.apache.log4j.rolling.SizedBasedRollingTestCase" />
+      <test name="org.apache.log4j.rolling.SizeBasedRollingTestCase" />
     </junit>
   </target>
 
