--- a/build.xml
+++ b/build.xml
@@ -4,11 +4,12 @@
 <project name="columba" default="build" basedir=".">
 	<property name="src" value="."/>
 	<property name="build" value="build"/>
-	<property name="user.name" value="The columba Team"/>
+	<property name="user.name" value="The Columba Team"/>
 	<!-- here we should use the cvs-verion info for automatic replace the version -->
-	<property name="version" value="0.9.11"/>
-	<property name="dest" value="../columba-${version}"/>
+	<property name="version" value="0.10.0"/>
+	<property name="dest" value="./classes"/>
 	<property name="ownclasspath" value="${classpath}:${src}/lib/xalan.jar:${src}/lib/jaxp.jar:${src}/lib/log4j.jar:${src}/lib/lucene-1.2.jar:${src}/lib/junit.jar:${src}/lib/jakarta-oro-2.0.6.jar:${src}/lib/jargs.jar"/>
+
 
 	<!-- definition of the task to check the style of the java-code -->
 	<taskdef name="checkstyle" classname="com.puppycrawl.tools.checkstyle.CheckStyleTask">
@@ -16,7 +17,7 @@
 			<pathelement location="${src}/lib/checkstyle-all-2.1.jar"/>
 		</classpath>
 	</taskdef>
-
+	
 	<!-- the task that realy checks the style -->
 	<target name="verify">
 		<checkstyle lcurlyType="nlow"
@@ -72,7 +73,6 @@
 				<include name="LICENSE"/>
 				<include name="CHANGES"/>
 				<include name="AUTHORS"/>
-				<include name="RUN"/>
 				<include name="run.bat"/>
 				<include name="run.sh"/>
 				<include name="run_source.bat"/>
@@ -101,46 +101,26 @@
 			<fileset dir="${src}/res/">
 			 <include name="**"/>
 			</fileset>
-			<!--
- 			<fileset dir="${src}/src/core/core/">
-			 <include name="**"/>
-			</fileset>
-			<fileset dir="${src}/src/mail/core/">
-			 <include name="**"/>
-			</fileset>
-			<fileset dir="${src}/src/mail/independent/">
-			 <include name="**"/>
-			</fileset>
-			<fileset dir="${src}/src/addressbook/core/">
-			 <include name="**"/>
-			</fileset>
-			-->
-			<!-- need to uncomment this when adding resource files
-			<fileset dir="${dest}/src/addressbook/independent/">
-			 <include name="**"/>
-			</fileset>
-			-->
 		</copy>
 	</target>
 
 	<!-- compile the classes -->
-	<target name="compile" depends="init,copy-required">
+	<target name="compile" depends="init, copy-resources">
 		<echo message="the classes are going to ${dest} "/>
 		<javac srcdir="${src}/src/" destdir="${dest}" classpath="${ownclasspath}" encoding="ISO-8859-1" debug="yes"/>
 	</target>
 
 	<!-- pack the files into one jar file with automatic manifest file -->
-	<target name="jar" depends="compile, copy-resources">
-		<delete file="${dest}/columba.jar"/>
-		<echo message="the jar file is going to ${dest}/columba.jar "/>
-		<jar basedir="${dest}" jarfile="${dest}/columba.jar">
+	<target name="jar" depends="compile">
+		<delete file="columba.jar"/>
+		<echo message="the jar file is going to be columba.jar "/>
+		<jar basedir="${dest}" jarfile="columba.jar">
 			<include name="**"/>
 			<exclude name="columba.jar"/>
 			<exclude name="README"/>
 			<exclude name="CHANGES"/>
 			<exclude name="LICENSE"/>
 			<exclude name="AUTHORS"/>
-			<exclude name="RUN"/>
 			<exclude name="run.bat"/>
 			<exclude name="run.sh"/>
 			<exclude name="run_source.bat"/>
@@ -190,14 +170,13 @@ else echo "cannot find columba.jar in `pwd`"; fi
 	<!-- create an release zip file for linux and unix flavors, contains the jar file and README, LICENSE, CHANGES, AUTHORS -->
 	<!-- this task is for an binary release -->
 	<target name="zip-bin-unix" depends="jar,run-script, linefeeds-unix">
-		<echo message="the zipfile is going to ${dest}/columba-unix-${version}-bin.zip "/>
-		<zip zipfile="${dest}/columba-unix-${version}-bin.zip" update="true">
-			<zipfileset dir="${dest}" prefix="columba-unix-${version}-bin">
+		<echo message="the zipfile is going to columba-unix-${version}-bin.zip "/>
+		<zip zipfile="columba-unix-${version}-bin.zip" update="true">
+			<zipfileset dir="." prefix="columba-unix-${version}-bin">
 				<include name="README"/>
 				<include name="AUTHORS"/>
 				<include name="LICENSE"/>
 				<include name="CHANGES"/>
-				<include name="RUN"/>
 				<include name="run.sh"/>
 				<include name="columba.jar"/>
 				<include name="**/*.jar"/>
@@ -215,14 +194,13 @@ else echo "cannot find columba.jar in `pwd`"; fi
 	<!-- create an release zip file for windows flavors, contains the jar file and README, LICENSE, CHANGES, AUTHORS -->
 	<!-- this task is for an binary release -->
 	<target name="zip-bin-win32" depends="jar,run-script, linefeeds-win32">
-		<echo message="the zipfile are going to ${dest}/columba-win32-${version}-bin.zip "/>
-		<zip zipfile="${dest}/columba-win32-${version}-bin.zip" update="true">
-			<zipfileset dir="${dest}" prefix="columba-win32-${version}-bin">
+		<echo message="the zipfile are going to columba-win32-${version}-bin.zip "/>
+		<zip zipfile="columba-win32-${version}-bin.zip" update="true">
+			<zipfileset dir="." prefix="columba-win32-${version}-bin">
 				<include name="README"/>
 				<include name="AUTHORS"/>
 				<include name="LICENSE"/>
 				<include name="CHANGES"/>
-				<include name="RUN"/>
 				<include name="run.bat"/>
 				<include name="columba.jar"/>
 				<include name="**/*.jar"/>
@@ -234,17 +212,17 @@ else echo "cannot find columba.jar in `pwd`"; fi
 				<exclude name="plugins/**" />
 				<exclude name="classes/**"/>			
 			</zipfileset>
-			<zipfileset dir="${dest}" includes="native/win32/windows_maximize/bin/WindowMaximizer.dll" fullpath="columba-win32-${version}-bin/WindowMaximizer.dll"/>
-			<zipfileset dir="${dest}" includes="native/win32/launcher/bin/columba.exe" fullpath="columba-win32-${version}-bin/columba.exe"/>
+			<zipfileset dir="." includes="native/win32/windows_maximize/bin/WindowMaximizer.dll" fullpath="columba-win32-${version}-bin/WindowMaximizer.dll"/>
+			<zipfileset dir="." includes="native/win32/launcher/bin/columba.exe" fullpath="columba-win32-${version}-bin/columba.exe"/>
 		</zip>
 	</target>
 	
 	<!-- create an source zip file for linux and unix flavors, contain all sources and README, LICENSE, CHANGES, AUTHORS -->
 	<!-- this task is for an source release -->
 	<target name="zip-source-unix" depends="init,run-script,linefeeds-unix">
-		<echo message="the zipfile is going to ${dest}/columba-${version}-src.zip "/>
-		<zip zipfile="${dest}/columba-unix-${version}-src.zip" update="true">
-			<zipfileset dir="${src}" prefix="columba-unix-${version}-src">
+		<echo message="the zipfile is going to columba-${version}-src.zip "/>
+		<zip zipfile="columba-unix-${version}-src.zip" update="true">
+			<zipfileset dir="." prefix="columba-unix-${version}-src">
 				<include name="**/*.java"/>
 				<include name="**/*.jar"/>
 				<include name="**/*.xml"/>
@@ -264,6 +242,7 @@ else echo "cannot find columba.jar in `pwd`"; fi
 				<include name="plugins/**/*.java"/>
 				<include name="plugins/**/*.xml"/>
 				<exclude name="plugins/**/*.jar"/>
+				<exclude name="columba.jar"/>
 				<exclude name="classes/**"/>
 			</zipfileset>
 		</zip>
@@ -272,9 +251,9 @@ else echo "cannot find columba.jar in `pwd`"; fi
 	<!-- create an source zip file for windows flavors, contain all sources and README, LICENSE, CHANGES, AUTHORS -->
 	<!-- this task is for an source release -->
 	<target name="zip-source-win32" depends="init,run-script,linefeeds-win32">
-		<echo message="the zipfile are going to ${dest}/columba-${version}-src.zip "/>
-		<zip zipfile="${dest}/columba-win32-${version}-src.zip" update="true">
-			<zipfileset dir="${src}" prefix="columba-win32-${version}-src">
+		<echo message="the zipfile are going to columba-${version}-src.zip "/>
+		<zip zipfile="columba-win32-${version}-src.zip" update="true">
+			<zipfileset dir="." prefix="columba-win32-${version}-src">
 				<include name="**/*.java"/>
 				<include name="**/*.jar"/>
 				<include name="**/*.xml"/>
@@ -294,6 +273,7 @@ else echo "cannot find columba.jar in `pwd`"; fi
 				<include name="plugins/**/*.java"/>
 				<include name="plugins/**/*.xml"/>
 				<exclude name="plugins/**/*.jar"/>
+				<exclude name="columba.jar"/>
 				<exclude name="classes/**"/>
 			</zipfileset>
 		</zip>
@@ -342,9 +322,8 @@ else echo "cannot find columba.jar in `pwd`"; fi
 	<!-- create default package for translators -->
 	<target name="i18n">
  	<zip zipfile="default_i18n.zip" basedir="res" update="true">
-		
-			<include name="**/*.properties"/>
-		
+		<include name="**/*.properties"/>
 	</zip>
 	</target>
+	
 </project>
