Carol 1.4.2 release (minor documentation modification)

--- a/doc/usermanual/example/carol.properties
+++ b/doc/usermanual/example/carol.properties
@@ -12,6 +12,9 @@ carol.start.rmi=true
 # use carol naming (Multi JNDI)
 carol.start.jndi=true
 
+# port number
+carol.jvm.rmi.server.port=10
+
 ###################################################
 # Configuration for Rmi JRMP                      #
 ###################################################
@@ -33,9 +36,6 @@ carol.jrmp.context.factory
 # java.naming.provider.url property
 carol.jrmp.url
  =rmi://localhost:1099
-
-# port number
-carol.jvm.jrmp.server.portnumber=10
 
 ####################################################
 # Configuration for Rmi IIOP                       #
