--- a/.classpath
+++ b/.classpath
@@ -12,7 +12,7 @@
     <classpathentry kind="lib" path="lib/junit.jar"/>
     <classpathentry kind="lib" path="lib/log4j.jar"/>
     <classpathentry kind="lib" path="lib/jakarta-oro-2.0.6.jar"/>
-    <classpathentry kind="lib" path="lib/lucene-1.2.jar"/>
     <classpathentry kind="lib" path="lib/jargs.jar"/>
+    <classpathentry kind="lib" path="lib/lucene-1.3-rc1.jar"/>
     <classpathentry kind="output" path="classes"/>
 </classpath>
