--- a/build.xml
+++ b/build.xml
@@ -8,7 +8,7 @@
 	<!-- here we should use the cvs-verion info for automatic replace the version -->
 	<property name="version" value="0.10.0"/>
 	<property name="dest" value="./classes"/>
-	<property name="ownclasspath" value="${classpath}:${src}/lib/xalan.jar:${src}/lib/jaxp.jar:${src}/lib/log4j.jar:${src}/lib/lucene-1.2.jar:${src}/lib/junit.jar:${src}/lib/jakarta-oro-2.0.6.jar:${src}/lib/jargs.jar"/>
+	<property name="ownclasspath" value="${classpath}:${src}/lib/xalan.jar:${src}/lib/jaxp.jar:${src}/lib/log4j.jar:${src}/lib/lucene-1.3-rc1.jar:${src}/lib/junit.jar:${src}/lib/jakarta-oro-2.0.6.jar:${src}/lib/jargs.jar"/>
 
 
 	<!-- definition of the task to check the style of the java-code -->
