Fixed traces and a registry bug in cmi. Implemented registry list() in cmi.

--- a/ext/carol.properties
+++ b/ext/carol.properties
@@ -102,6 +102,30 @@ carol.jeremie.url=jrmi://localhost:2001
 #                   Configuration for CMI                            #
 ######################################################################
 
+# java.naming.provider.url property
+# For a server : the URL on which the registry will be started
+# For clients : lists the registries available
+carol.cmi.url=cmi://localhost:2002
+
+# Multicast address of the registries in the cluster
+carol.cmi.multicast.address=224.0.0.35:35467
+
+# IP address or network mask of the local network interface to use to send
+# multicast messages
+# Needed only when the server has several network interfaces and the multicast
+# messages do not go through to interface you want them to use
+# Works only on JDK 1.4
+#carol.cmi.multicast.itf 192.168.25.0/24
+
+# Groupname for Javagroups. No need to change if don't know.
+carol.cmi.multicast.groupname=G1
+
+# Factor used for this server in wheighted round robin algorithms
+carol.cmi.rr.factor=100
+
+# If enabled, cluster stubs will print messages on some error cases
+carol.cmi.stub.debug false
+
 # portable remote object delegate class for this protocol (class name with package)
 carol.cmi.PortableRemoteObjectClass=org.objectweb.carol.rmi.multi.CmiPRODelegate
 
@@ -112,9 +136,6 @@ carol.cmi.NameServiceClass=org.objectweb.carol.jndi.ns.CmiRegistry
 # configuration for rmi jrmp jndi
 # java.naming.factory.initial property
 carol.cmi.context.factory=org.objectweb.carol.cmi.jndi.CmiInitialContextFactory
-
-# java.naming.provider.url property
-carol.cmi.url=cmi://localhost:2002
 
 ######################################################################
 #                   Configuration for LMI                            #
