--- a/build.xml
+++ b/build.xml
@@ -135,7 +135,7 @@
 			<exclude name="native/**"/>
 			<manifest>
 				<attribute name="Main-Class" value="org.columba.core.main.Main"/>
-				<attribute name="Class-Path" value="lib/xalan.jar lib/jaxp.jar lib/crimson.jar lib/log4j.jar lib/junit.jar lib/jakarta-oro-2.0.6.jar lib/lucene-1.2.jar lib/jargs.jar"/>
+				<attribute name="Class-Path" value="lib/xalan.jar lib/jaxp.jar lib/crimson.jar lib/log4j.jar lib/junit.jar lib/jakarta-oro-2.0.6.jar lib/lucene-1.3-rc1.jar lib/jargs.jar"/>
 				<attribute name="Sealed" value="false"/>
 			</manifest>
 		</jar>
