--- a/tests/build.xml
+++ b/tests/build.xml
@@ -409,7 +409,15 @@
   <!-- ========================= Very long Tests ======================= -->
   <!-- ================================================================= -->
   
-  <!-- none yet, but StressCategory is a good candidate... -->
+ 
+  <target name="ReaderWriterLock" depends="build, cleanOutputDir">
+    <junit printsummary="yes" fork="no" haltonfailure="yes">
+      <classpath refid="tests.classpath"/>
+      <formatter type="plain" usefile="false"/>
+      <test name="org.apache.log4j.helpers.ReaderWriterLockTestCase" />
+    </junit>
+  </target>
+  
   
 </project>
 
