--- a/build.xml
+++ b/build.xml
@@ -298,6 +298,7 @@ else echo "cannot find columba.jar in `pwd`"; fi
           <fileset dir="${src}">
            <include name="columba.jar"/>
            <include name="lib/xalan.jar"/>
+           <include name="lib/crimson.jar"/>
 	   <include name="lib/jaxp.jar"/>
            <include name="lib/log4j.jar"/>
            <include name="lib/lucene-1.3-rc1.jar"/>
