--- a/tests/build.xml
+++ b/tests/build.xml
@@ -411,7 +411,8 @@
   
  
   <target name="ReaderWriterLock" depends="build, cleanOutputDir">
-    <junit printsummary="yes" fork="no" haltonfailure="yes">
+    <junit printsummary="yes" fork="no" haltonfailure="yes"> 
+      <sysproperty key="runLen" value="10000"/>     
       <classpath refid="tests.classpath"/>
       <formatter type="plain" usefile="false"/>
       <test name="org.apache.log4j.helpers.ReaderWriterLockTestCase" />
