Update the web portion of the Struts-Faces example app for the new EA4 release of JavaServer Faces.

--- a/contrib/struts-faces/web/example/WEB-INF/web.xml
+++ b/contrib/struts-faces/web/example/WEB-INF/web.xml
@@ -6,6 +6,7 @@
 
 <web-app>
 
+  <display-name>Struts-Faces Integration Library Example</display-name>
 
   <!-- JavaServer Faces Servlet Configuration -->
   <servlet>
